--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.16",
-    "@uiw/react-codemirror": "^4.21.21",
-    "@codemirror/lang-html": "^6.4.7",
     "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-html": "^6.4.7",
     "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-php": "^6.0.2",
     "@codemirror/lang-python": "^6.1.3",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@uiw/react-codemirror": "^4.21.21",
+    "canvas-confetti": "^1.9.2",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
-    "canvas-confetti": "^1.9.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.8"
   }
 }
-
